// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapper matches snapshot 1`] = `
.c1 {
  width: 100%;
  padding: 0 3.2rem;
}

.c0 {
  position: relative;
  overflow: visible;
  -webkit-transition: margin-left 300ms;
  transition: margin-left 300ms;
}

@media screen and (max-width:75em) {
  .c1 {
    padding: 0 1.6rem;
  }
}

@media screen {
  .c0 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

<div
  className="c0 c1"
/>
`;

exports[`wrapper matches snapshot with search open 1`] = `
.c1 {
  width: 100%;
  padding: 0 3.2rem;
}

.c0 {
  position: relative;
  overflow: visible;
  -webkit-transition: margin-left 300ms;
  transition: margin-left 300ms;
}

@media screen and (max-width:75em) {
  .c1 {
    padding: 0 1.6rem;
  }
}

@media screen {
  .c0 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    margin-left: 44rem;
  }
}

<div
  className="c0 c1"
/>
`;
